Fixed animations on mobile

--- a/src/components/PostImage/PostImage.module.css
+++ b/src/components/PostImage/PostImage.module.css
@@ -126,6 +126,7 @@
 }
 
 @media only screen and (max-width: 1200px) {
+
 	.post {
 		width: 60vmax;
 	}
@@ -136,6 +137,7 @@
 }
 
 @media only screen and (max-width: 500px) and (min-height: 300px) {
+
 	.post {
 		margin-bottom: 2vmax;
 		width: 100%;
@@ -144,6 +146,14 @@
 		border: none;
 		border-radius: 0px;
 		padding-bottom: 1vmax;
+	}
+
+	.post:hover {
+		transform: scale(1.00);
+	}
+
+	.animation:hover {
+		transform: scale(1.00);
 	}
 
 	.creator {
@@ -173,6 +183,8 @@
 		margin-top: 4vmax;
 		font-size: 3vmax;
 	}
+
+	
 }
 
 /* Hide input arrows */
